--- a/views/products.ejs
+++ b/views/products.ejs
@@ -7,6 +7,30 @@
     <h1>
       produtos
     </h1>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/512px-Circle-icons-profile.svg.png" 
+      height="200px"
+      width="20%"
+      alt="Magalu em frente a loja da magazine luiza" 
+    />
+
     <p>Paragrafo</p>
+    <p>
+      Meu nome é: <strong>Fábio Souza</strong>
+      <br />
+      Idade: <strong>41</strong>
+      <br />
+      Estado Civil: <strong>Solteiro</strong>
+    </p>
+    <h3>Qualidades</h3>
+    <ul>
+      <li>Jogo bem video game</li>
+      <li>Sou programador</li>
+    </ul>
+    <ol>
+      <li>Sei cozinhar</li>
+      <li>Sei jogar bola</li>
+    </ol>
+    <a href="/about">Acessar Sobre</a>
   </body>
 </html>
