--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Página principal</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <%- include('./partials/header') %>
+
+    <main class="container">
+      <h1>Minha Loja de Produtos</h1>
+      <div class="content">
+        <section class="about">
+          <h3>Sobre nós</h3>
+          <p>Somos um site com mais de 10 anos de experiencia, já atendemos diversos clientes</p>
+        </section>
+        <section class="benefits">
+          <div class="custom-row">
+            <div class="box card">
+              <div class="card-body">
+                <h2 class="card-title">Cadastro de Produtos</h2>
+                <p class="card-text">Dentro do nosso site, você poderá cadastrar produtos que estão disponíveis na sua loja</p>
+              </div>
+            </div>
+          </div>
+          <div class="custom-row">
+            <div class="box card">
+              <div class="card-body">
+                <h2 class="card-title">Listagem de Produtos</h2>  
+                <p class="card-text">Dentro no nosso site, você poderá visutalizar todos os produtos que você tem</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
+
